# xexemu

./: .gitignore  CMakeLists.txt  README.md
include/: xex2.h  xex2_exceptions.h
src/: main.cpp  xex2_loader.cpp  xex2_modifier.cpp  xex2_parser.cpp  xex2_validator.cpp
